--- a/pom.xml
+++ b/pom.xml
@@ -86,27 +86,16 @@
 						<Private-Package>${bundle.namespace}.*</Private-Package>
 						<Bundle-Activator>${bundle.namespace}.CyActivator</Bundle-Activator>
 						<Embed-Dependency>commons-math;groupId=org.apache.commons;inline=true</Embed-Dependency>
-                        <Import-Package>*;resolution:=optional</Import-Package>
-					</instructions>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>${maven-bundle-plugin.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-						<Bundle-Version>${project.version}</Bundle-Version>
-						<Export-Package>!${bundle.namespace}.*</Export-Package>
-						<Private-Package>${bundle.namespace}.*</Private-Package>
-						<Bundle-Activator>${bundle.namespace}.CyActivator</Bundle-Activator>
+						<Embed-Dependency>jfreechart;groupId=jfree;inline=true</Embed-Dependency>
+						<Embed-Dependency>jcommon;groupId=jfree;inline=true</Embed-Dependency>
 						<Embed-Dependency>jama;groupId=gov.nist.math;inline=true</Embed-Dependency>
                         <Import-Package>*;resolution:=optional</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
+			
+			
+			
 			<!-- Generates the test OSGi metadata based on the osgi.bnd file. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -257,9 +246,17 @@
 			<version>2.1.3</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+     		<groupId>jfree</groupId> 
+     		<artifactId>jfreechart</artifactId>
+     		<version>1.0.13</version> 
+    	</dependency>
+    	<dependency>
+     		<groupId>jfree</groupId> 
+     		<artifactId>jcommon</artifactId>
+     		<version>1.0.16</version> 
+    	</dependency>
 		
-		
-
 	</dependencies>
 
 </project>
