--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<maven-bundle-plugin.version>2.3.4</maven-bundle-plugin.version>
 		<maven-surefire-plugin.version>2.7.1</maven-surefire-plugin.version>
 		<maven-jar-plugin.version>2.4</maven-jar-plugin.version>
-		<cytoscape.api.version>[3.0.0-alpha8,4.0)</cytoscape.api.version>
+		<cytoscape.api.version>3.0.2</cytoscape.api.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
 		<ops4j.api.version>1.5.2</ops4j.api.version>
 		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
@@ -260,7 +260,12 @@
      		<artifactId>jcommon</artifactId>
      		<version>1.0.16</version> 
     	</dependency>
-		
+
+    	<dependency>
+    		<groupId>net.sf.opencsv</groupId>
+    		<artifactId>opencsv</artifactId>
+    		<version>2.0</version>
+    	</dependency>
 	</dependencies>
 
 </project>
